# nopaldb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md
.github/workflows/: community-ci.yml  nightly.yml  release-python.yml  tutorial-smoke.yml
docs/: ADOPTION.md  ALGORITHMS.md  ARCHITECTURE.md  DEADLOCK_DETECTION.md  DURABILITY.md  EMBEDDINGS.md  FEATURE_TIERS.md  HNSW_ALGORITHM.md  HYBRID_SEARCH.md  INCREMENTAL_INGESTION.md  INDEXING_DOCS.MD  ISOLATION_LEVELS.md  MCP_CLAUDE_DESKTOP.md  ML_EXAMPLES.md  NQL_WRITE_CRUD_HANDS_ON.md  PROPERTY_INDEXING.md  QUERY_PLANNER_DOCS.MD  README.md  UPSERT.md
docs/arrow/: 01-OVERVIEW.md  02-QUICKSTART.md  03-TECHNICAL.md  04-EXAMPLES.md  05-ML-INTEGRATION.md  06-PERFORMANCE.md
docs/benchmarks/: community_dual_release_2026-03-11.md
docs/en/: NQL_REFERENCE.md  NQL_TUTORIAL.md  README.md
docs/es/: API_REFERENCIA.md  API_RUST.md  ARQUITECTURA_EJECUTOR.md  README.md  (+4 more)
ndbstudio/: Cargo.toml  README.md
ndbstudio/src/: app.rs  main.rs  session.rs  web_server.rs  workbench.rs
ndbstudio/src/commands/: handlers.rs  mod.rs
ndbstudio/src/config/: keybindings.rs  mod.rs
ndbstudio/src/engine/: executor.rs  mapper.rs  mod.rs
ndbstudio/src/ui/: editor.rs  graph.rs  help.rs  history.rs  mod.rs  palette.rs  results.rs  schema.rs  session_browser.rs  timeline.rs
ndbstudio/tests/: schema_sync_integration.rs
ndbstudio/web/: api.js  app.js  editor.js  graph.js  index.html  main.js  styles.css  ui.js
nopaldb/: Cargo.toml  README.md  README.pypi.md  pyproject.toml
nopaldb-mcp/: Cargo.toml
nopaldb-mcp/src/: auth.rs  ipc_export.rs  main.rs  server.rs  tools.rs
nopaldb/benches/: graph_ops.rs
nopaldb/examples/: NQL_TEST_Aggregation.py  README.md  Test_Clustering.py  async_demo.rs  benchmark_community_dual.rs  benchmarks.rs  bfs_vs_traverse.rs  character_network.rs  deadlock_demo.rs  debug_index.py  debug_index_manager.rs  embeddings_semantic_search.rs  florentine_families_dataset.py  game_dungeon_generator.rs  game_quest_system.rs  game_skill_tree.rs  gnn_graph_embeddings.rs  gnn_link_prediction.rs  gnn_node_classification.rs  isolation_level_demo.rs  knowledge_graph.rs  migrate_json_to_bincode.rs  ml_demo_pyg.py  ml_fraud_detection.rs  ml_link_prediction.rs  ml_recommendation.rs  mvcc_time_travel.rs  path_embeddings_fraud.rs  path_queries_embeddings.py  path_queries_f1_f3.py  path_queries_minivm.py  persistence_demo.rs  qa_challenge_python_checks.py  qa_challenge_queries.nql  qa_challenge_suite.rs  query_builder_demo.rs  rpg_quest_system.rs  schema_inspection.py  skill_tree.rs  social_network.rs  (+25 more)
nopaldb/examples/arrow/: quickstart.rs
nopaldb/examples/mobile/: on_device_analytics.py
nopaldb/fuzz/: Cargo.toml
nopaldb/fuzz/fuzz_targets/: nql_parse.rs
nopaldb/python/nopaldb/: __init__.py  nopaldb.pyi
nopaldb/python/scripts/: check_stubs.py  typecheck_sample.py
nopaldb/src/: easter_eggs.rs  error.rs  isolation.rs  lib.rs  lock_manager.rs  types.rs
nopaldb/src/algorithms/: betweenness.rs  clustering.rs  community.rs  degree.rs  mod.rs  pagerank.rs  shortest_path.rs
nopaldb/src/arrow_export/: mod.rs
nopaldb/src/embeddings/: edge.rs  index.rs  mod.rs  node.rs  path_reference.rs  persistence.rs
nopaldb/src/graph/: applier.rs  hybrid.rs  mod.rs  upsert.rs  view.rs
nopaldb/src/index/: btree.rs  fulltext.rs  hash.rs  mod.rs  storage.rs  taxonomy.rs
nopaldb/src/ml/: arrow_tensor.rs  mod.rs  pyg.rs
nopaldb/src/mvcc/: mod.rs
nopaldb/src/planner/: mod.rs
nopaldb/src/python/: arrow.rs  bulk_loader.rs  graph.rs  mod.rs  query.rs  reasoner.rs  runtime.rs  transaction.rs
nopaldb/src/query/: builder.rs  filter.rs  mod.rs  sketch_manager.rs  step.rs
nopaldb/src/query/nql/: mod.rs  validator.rs
nopaldb/src/query/nql/executor/: aggregations.rs  export.rs  mod.rs  operators.rs  result.rs  write.rs
nopaldb/src/query/nql/parser/: ast.rs  mod.rs  nql.pest
nopaldb/src/rdf_owl/: exporter.rs  importer.rs  mod.rs  rdf.rs
nopaldb/src/reasoner/: mod.rs
nopaldb/src/schema/: mod.rs
nopaldb/src/shacl/: constraint.rs  mod.rs  report.rs  shape.rs
nopaldb/src/storage/: backend.rs  mod.rs
nopaldb/src/transaction/: mod.rs
nopaldb/src/traversal/: mod.rs
nopaldb/src/wal/: mod.rs
nopaldb/tests/: adjacency_update_regression_test.rs  all_fixes_test.rs  arrow_integration_test.rs  checkpoint_test.rs  clock_persistence_test.rs  concurrent_writers_test.rs  crash_commit_test.rs  crash_mixed_load_test.rs  crash_recovery_test.rs  deadlock_tests.rs  delete_by_key_test.rs  easter_egg_test.rs  edge_persistence_test.rs  embeddings_python_api_test.rs  embeddings_test.rs  export_test.rs  hybrid_test.rs  index_persistence.rs  mvcc_time_travel_test.rs  mvcc_transaction_test.rs  nql_algorithm_filter_test.rs  nql_create_tests.rs  nql_delete_tests.rs  nql_embeddings_test.rs  nql_executor_test.rs  nql_having_tests.rs  nql_ontology_functions_test.rs  nql_parser_test.rs  nql_path_anomaly_e10_test.rs  nql_path_embedding_e7_test.rs  nql_path_knn_e9_test.rs  nql_path_metadata_profile_test.rs  nql_path_quantifier_test.rs  nql_path_reducers_test.rs  nql_path_return_test.rs  nql_path_similarity_e8_test.rs  nql_path_vm_test.rs  nql_pattern_embedding_e3_test.rs  nql_pattern_matching_test.rs  nql_property_map_test.rs  (+27 more)
nopaldb/tests/fixtures/: synthetic_offshore.ttl
python/: README.md
tutorials/: Makefile  README.md  pyproject.toml  requirements.txt
tutorials/data/: biomedical.ttl
tutorials/notebooks/: 00_setup_smoke_test.ipynb  01_florentine_families.ipynb  02_synthetic_offshore.ipynb  03_biomedical_owl.ipynb  04_synthetic_fraud.ipynb  06_mcp_ontologia.ipynb
tutorials/precomputed/: acto2_offshore_minilm.npz  acto2_offshore_pathref.npz  acto4_fraud_persons_minilm.npz
tutorials/second_brain/: README.md  ingest.py  query.py
tutorials/second_brain/vault/: graphrag.md  knowledge-graphs.md  neuro-symbolic.md  second-brain.md  spaced-repetition.md  zettelkasten.md
tutorials/shared/: __init__.py  biomedical_dataset.py  embeddings.py  paths.py  synthetic_fraud_dataset.py  synthetic_offshore_dataset.py  viz.py
(+58 files in other folders)
