[workspace]
resolver = "2"
exclude = ["nopaldb/fuzz"]

members = [
    "nopaldb",
    "ndbstudio",
    "nopaldb-mcp",
    # "python",
]

[workspace.package]
version = "0.4.31"
edition = "2024"
authors = ["Sharop <sharop@gmail.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/sharop/nopaldb"

[workspace.dependencies]
# Shared dependencies across workspace
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

# For NDStudio
ratatui = "0.30"
crossterm = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
