[package]
name = "nopaldb-mcp"
version.workspace = true
edition = "2024"
authors.workspace = true
description = "MCP server for NopalDB — exposes graph queries, traversal, and algorithms as MCP tools"
license.workspace = true
repository.workspace = true

[[bin]]
name = "nopaldb-mcp"
path = "src/main.rs"

[dependencies]
nopaldb   = { path = "../nopaldb", features = ["storage-sled", "algorithms", "embeddings-index", "reasoner"] }
rmcp      = { version = "1.5", features = ["transport-io", "transport-streamable-http-server"] }
axum      = "0.7"
tower     = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tokio     = { version = "1", features = ["full"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
clap      = { version = "4", features = ["derive"] }
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow    = "1"
memmap2   = "0.9"
uuid      = { version = "1.8", features = ["v4"] }

[features]
default = []
